--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
   }
 
   function handleScrollAnimations() {
-    const animatedElements = document.querySelectorAll('.box, h1, h2, .media-transition, .email, .icons');
+    const animatedElements = document.querySelectorAll('.box, h1, .content, .media-transition, .email, .icons');
     
     animatedElements.forEach(element => {
       if (isInViewport(element)) {
