--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-  <header> 
+<header> 
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
@@ -22,12 +22,14 @@
       </div>
       
       <div class="center-nav">
-        <a href="index.html" >Home</a>
+        <a href="index.html"">Home</a>
         <a href="game.html">Game</a>
         <a href="contact.html" class="active">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
     </div>
+
+      
   </nav>
 </header>
 
