--- a/aboutus.html
+++ b/aboutus.html
@@ -22,12 +22,14 @@
       </div>
       
       <div class="center-nav">
-        <a href="index.html" >Home</a>
+        <a href="index.html"">Home</a>
         <a href="game.html">Game</a>
-        <a href="contact.html">Contact</a>
-        <a href="aboutus.html" class="active">About us</a>
+        <a href="contact.html" class="active">Contact</a>
+        <a href="aboutus.html">About us</a>
       </div>
     </div>
+
+      
   </nav>
 </header>
 
