About us and Contact responsiveness

--- a/aboutus.html
+++ b/aboutus.html
@@ -22,10 +22,10 @@
       </div>
       
       <div class="center-nav">
-        <a href="index.html"">Home</a>
+        <a href="index.html">Home</a>
         <a href="game.html">Game</a>
-        <a href="contact.html" class="active">Contact</a>
-        <a href="aboutus.html">About us</a>
+        <a href="contact.html">Contact</a>
+        <a href="aboutus.html"  class="active">About us</a>
       </div>
     </div>
 
@@ -60,9 +60,9 @@
 <br>&bull; To give players insight into social and cultural issues in the Philippines
 <br>&bull; To encourage discussion and reflection through interactive storytelling Our Goal</p>
     </div>
-    <div class="individual-box">
+    <div class="individual-box" id="last-text">
         <p class="tip">OUR GOAL</p>
-        <p class="second-text">&bull; To build a portfolio of games that combine entertainment with social awareness
+        <p class="second-text" >&bull; To build a portfolio of games that combine entertainment with social awareness
 <br>&bull; To grow as a team while sharing Filipino stories with the world
 <br>&bull; To make a positive impact on players and society through meaningful game experiences</p>
     </div>
