--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       <div class="left-logo">
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
+
+      <!-- Hamburger Button -->
+      <button class="hamburger" onclick="classList.toggle('active'); 
+      document.querySelector('.center-nav').classList.toggle('active')">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       
       <div class="center-nav">
         <a href="index.html" class="active">Home</a>
@@ -35,8 +43,6 @@
 
       <div class="right-nav">Get Now</div>
     </div>
-
-      
   </nav>
 </header>
 
