--- a/aboutus.html
+++ b/aboutus.html
@@ -14,22 +14,30 @@
 
 </head>
 <body>
-  <header> 
+ <header> 
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
+
+      <!-- Hamburger Button -->
+      <button class="hamburger" onclick="classList.toggle('active'); 
+      document.querySelector('.center-nav').classList.toggle('active')">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       
       <div class="center-nav">
         <a href="index.html">Home</a>
-        <a href="game.html">Game</a>
+        <a href="game.html" >Game</a>
         <a href="contact.html">Contact</a>
-        <a href="aboutus.html"  class="active">About us</a>
+        <a href="aboutus.html" class="active">About us</a>
       </div>
-    </div>
 
-      
+      <div class="right-nav">Get Now</div>
+    </div>
   </nav>
 </header>
 
