--- a/contact.html
+++ b/contact.html
@@ -12,26 +12,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
-</head>
-<body>
 <header> 
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
+
+      <!-- Hamburger Button -->
+      <button class="hamburger" onclick="classList.toggle('active'); 
+      document.querySelector('.center-nav').classList.toggle('active')">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
       
       <div class="center-nav">
         <a href="index.html">Home</a>
-        <a href="game.html">Game</a>
-        <a href="contact.html" class="active">Contact</a>
+        <a href="game.html" >Game</a>
+        <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
-    </div>
 
-      
+      <div class="right-nav">Get Now</div>
+    </div>
   </nav>
 </header>
+
 <div class="relative">
 <div class="background-img">
       <img src="img/body-bg.jpg" alt="">
