--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
 
   <!-- files -->
   <link rel="stylesheet" href="css/game.css">
+  <link rel="stylesheet" href="css/home-header.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -14,19 +15,33 @@
 </head>
 <body>
 
- <header> 
+<header> 
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
+
+      <!-- Hamburger Button -->
+      <button class="hamburger" onclick="classList.toggle('active'); 
+      document.querySelector('.center-nav').classList.toggle('active')">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      
       <div class="center-nav">
         <a href="index.html" >Home</a>
         <a href="game.html" class="active">Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
-  </header>
+
+      <div class="right-nav">Get Now</div>
+    </div>
+  </nav>
+</header>
+
 
 
   <!-- main -->
