--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
 
       <!-- Hamburger Button -->
-      <button class="hamburger" onclick="classList.toggle('active'); 
+      <button class="hamburger" onclick="this.classList.toggle('active'); 
       document.querySelector('.center-nav').classList.toggle('active')">
         <span></span>
         <span></span>
