--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<!-- header -->
+<!-- Header -->
 <header> 
   <nav class="header-nav">
     <div class="header">
@@ -26,17 +26,19 @@
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
 
-      <!-- Hamburger Button -->
-      <button class="hamburger" onclick="this.classList.toggle('active'); 
-      document.querySelector('.center-nav').classList.toggle('active')">
+      <!-- Checkbox for hamburger toggle -->
+      <input type="checkbox" id="menu-toggle" class="menu-toggle">
+      
+      <!-- Hamburger Label -->
+      <label for="menu-toggle" class="hamburger">
         <span></span>
         <span></span>
         <span></span>
-      </button>
+      </label>
       
       <div class="center-nav">
-        <a href="index.html" class="active" >Home</a>
-        <a href="game.html" >Game</a>
+        <a href="index.html" class="active">Home</a>
+        <a href="game.html">Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
@@ -45,7 +47,6 @@
     </div>
   </nav>
 </header>
-
 <!-- main -->
   <main class="main-body">
     <div class="bg">
