--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<!-- Header -->
+<!-- header -->
 <header> 
   <nav class="header-nav">
     <div class="header">
@@ -26,19 +26,17 @@
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
 
-      <!-- Checkbox for hamburger toggle -->
-      <input type="checkbox" id="menu-toggle" class="menu-toggle">
-      
-      <!-- Hamburger Label -->
-      <label for="menu-toggle" class="hamburger">
+      <!-- Hamburger Button -->
+      <button class="hamburger" onclick="this.classList.toggle('active'); 
+      document.querySelector('.center-nav').classList.toggle('active')">
         <span></span>
         <span></span>
         <span></span>
-      </label>
+      </button>
       
       <div class="center-nav">
-        <a href="index.html" class="active">Home</a>
-        <a href="game.html">Game</a>
+        <a href="index.html" class="active" >Home</a>
+        <a href="game.html" >Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
@@ -47,6 +45,7 @@
     </div>
   </nav>
 </header>
+
 <!-- main -->
   <main class="main-body">
     <div class="bg">
