--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       <div class="center-nav">
         <a href="index.html">Home</a>
         <a href="game.html" >Game</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
 
