Changed the Game nav name

--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
       
       <div class="center-nav">
         <a href="index.html" >Home</a>
-        <a href="game.html" class="active">Game</a>
+        <a href="game.html" class="active">Game Info</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
