--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
       
       <div class="center-nav">
         <a href="index.html">Home</a>
-        <a href="game.html" >Game</a>
+        <a href="game.html" >Game Info</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html" class="active">About us</a>
       </div>
