--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       
       <div class="center-nav">
         <a href="index.html" class="active" >Home</a>
-        <a href="game.html" >Game</a>
+        <a href="game.html" >Game Info</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
