--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       
       <div class="center-nav">
         <a href="index.html">Home</a>
-        <a href="game.html">Game</a>
+        <a href="game.html">Game Info</a>
         <a href="contact.html" class="active">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
