--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <!-- files -->
   <link rel="stylesheet" href="css/contact-us.css">
   <link rel="stylesheet" href="css/home-header.css">
+  <link rel="icon" type="image/png" href="favicon.png">
   
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
