--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/home-header.css">
   <link rel="stylesheet" href="css/home-body.css">
   <link rel="stylesheet" href="css/loading.css">
+  <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- fonts -->
   <!-- horizon alternative -->
