--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="poet">
         <img class="poet-img" src="img/logo.png" alt="Game Logo">
       </div>
-      <div class="watch-trailer">WATCH TRAILER</div>
+      <a class="watch-trailer" href="https://youtu.be/MeL6mbqtmCI" target="_blank" rel="noopener noreferrer">WATCH TRAILER</a>
     </div>
   </div>
 </main>
