Connected contact button with emailto

--- a/contact.html
+++ b/contact.html
@@ -58,17 +58,23 @@
   <div class="faqs">
     <p class="tip">FAQS</p>
     <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
+    <a href="mailto:camoniasjohnkuer@gmail.com">
     <button>FAQS</button>
+      </a>
   </div>
   <div class="support">
     <p class="tip">SUPPORT</p>
     <p class="second-text">Report glitches, crashes, or unexpected behavior you experience while playing. Your reports help improve performance, balance, and overall game stability.</p>
+    <a href="mailto:camoniasjohnkuer@gmail.com">
     <button>SUPPORT</button>
+      </a>
   </div>
   <div class="feedback">
     <p class="tip">FEEDBACK & SUGGESTIONS</p>
     <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
+    <a href="mailto:camoniasjohnkuer@gmail.com">
     <button>FEEDBACK</button>
+      </a>
   </div>
 </div>
 
