Changed discord with facebook icon

--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 <div class="media-transition">
   <h3>FOLLOW US</h3>
   <div class="icons">
-    <img class="media-icons" src="img/discord.png" alt="Discord">
+    <img class="media-icons" src="img/facebook.png" alt="Facebook">
     <img class="media-icons" src="img/youtube.png" alt="YouTube">
     <img class="media-icons" src="img/instagram.png" alt="Instagram">
     <img class="media-icons" src="img/twitter.png" alt="Twitter">
