changed animation for media icons
also linked socmed accounts

--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,18 @@
 <div class="media-transition">
   <h3>FOLLOW US</h3>
   <div class="icons">
-    <img class="media-icons" src="img/facebook.png" alt="Facebook">
-    <img class="media-icons" src="img/youtube.png" alt="YouTube">
-    <img class="media-icons" src="img/instagram.png" alt="Instagram">
+    <a href="https://www.facebook.com/johnkuer.camonias/">
+      <img class="media-icons" src="img/facebook.png" alt="Facebook">
+    </a>
+    <a href="https://www.youtube.com/@JohnKuerCamonias-t6z">
+      <img class="media-icons" src="img/youtube.png" alt="YouTube">
+    </a>
+    <a href="https://www.instagram.com/nwl_crl">
+      <img class="media-icons" src="img/instagram.png" alt="Instagram">
+    </a>
+    <a href="https://x.com/MrBeast">
     <img class="media-icons" src="img/twitter.png" alt="Twitter">
+    </a>
   </div>
 </div>
 
