--- a/contact.html
+++ b/contact.html
@@ -58,21 +58,21 @@
   <div class="faqs">
     <p class="tip">FAQS</p>
     <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
-    <a href="mailto:camoniasjohnkuer@gmail.com">
+    <a href="mailto:camoniasjohnkuer@gmail.com" target="_blank" rel="noopener noreferrer">
     <button>FAQS</button>
       </a>
   </div>
   <div class="support">
     <p class="tip">SUPPORT</p>
     <p class="second-text">Report glitches, crashes, or unexpected behavior you experience while playing. Your reports help improve performance, balance, and overall game stability.</p>
-    <a href="mailto:camoniasjohnkuer@gmail.com">
+    <a href="mailto:camoniasjohnkuer@gmail.com" target="_blank" rel="noopener noreferrer">
     <button>SUPPORT</button>
       </a>
   </div>
   <div class="feedback">
     <p class="tip">FEEDBACK & SUGGESTIONS</p>
     <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
-    <a href="mailto:camoniasjohnkuer@gmail.com">
+    <a href="mailto:camoniasjohnkuer@gmail.com" target="_blank" rel="noopener noreferrer">
     <button>FEEDBACK</button>
       </a>
   </div>
@@ -81,16 +81,16 @@
 <div class="media-transition">
   <h3>FOLLOW US</h3>
   <div class="icons">
-    <a href="https://www.facebook.com/johnkuer.camonias/">
+    <a href="https://www.facebook.com/johnkuer.camonias/" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/facebook.png" alt="Facebook">
     </a>
-    <a href="https://www.youtube.com/@JohnKuerCamonias-t6z">
+    <a href="https://www.youtube.com/@JohnKuerCamonias-t6z" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/youtube.png" alt="YouTube">
     </a>
-    <a href="https://www.instagram.com/nwl_crl">
+    <a href="https://www.instagram.com/nwl_crl" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/instagram.png" alt="Instagram">
     </a>
-    <a href="https://x.com/MrBeast">
+    <a href="https://x.com/MrBeast" target="_blank" rel="noopener noreferrer">
     <img class="media-icons" src="img/twitter.png" alt="Twitter">
     </a>
   </div>
