--- a/contact.html
+++ b/contact.html
@@ -81,16 +81,16 @@
 <div class="media-transition">
   <h3>FOLLOW US</h3>
   <div class="icons">
-    <a href="https://www.facebook.com/johnkuer.camonias/" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.facebook.com/johnkuer.camonias" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/facebook.png" alt="Facebook">
     </a>
-    <a href="https://www.youtube.com/@JohnKuerCamonias-t6z" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.facebook.com/HAHAHAHAHAHAAHsadboyMode" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/youtube.png" alt="YouTube">
     </a>
-    <a href="https://www.instagram.com/nwl_crl" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.instagram.com/nwl_crl/" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/instagram.png" alt="Instagram">
     </a>
-    <a href="https://x.com/MrBeast" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.instagram.com/camoniasjohnkuer/" target="_blank" rel="noopener noreferrer">
     <img class="media-icons" src="img/twitter.png" alt="Twitter">
     </a>
   </div>
