--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
 <div class="media-transition">
   <h3>FOLLOW US</h3>
   <div class="icons">
-    <a href="https://www.facebook.com/johnkuer.camonias" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.facebook.com/HAHAHAHAHAHAAHsadboyMode" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/facebook.png" alt="Facebook">
     </a>
     <a href="https://www.facebook.com/HAHAHAHAHAHAAHsadboyMode" target="_blank">
