--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
     <a href="https://www.facebook.com/HAHAHAHAHAHAAHsadboyMode" target="_blank" rel="noopener noreferrer">
       <img class="media-icons" src="img/facebook.png" alt="Facebook">
     </a>
-    <a href="https://www.facebook.com/HAHAHAHAHAHAAHsadboyMode" target="_blank">
+    <a href="https://www.youtube.com/@JohnKuerCamonias-t6z" target="_blank">
       <img class="media-icons" src="img/youtube.png" alt="YouTube">
     </a>
     <a href="https://www.instagram.com/nwl_crl/" target="_blank">
